[package]

name = "kits"
version = "0.1.0"
authors = ["Håvard Wormdal Høiby <havardwhoiby@gmail.com>", "Sondre Lefsaker <sondrele@stud.ntnu.no>"]

description = "Bindings for SiliconLabs kits"
repository = "https://github.com/RustyGecko/kits"

keywords = ["kits", "bindings"]

[features]
stk3700 = ["emlib/stk3700"]
dk3750 = ["emlib/dk3750"]

[target.thumbv7m-none-eabi.dependencies.core]
git = "https://github.com/RustyGecko/rust-core.git"

[target.thumbv7m-none-eabi.dependencies.emlib]
git = "https://github.com/RustyGecko/emlib.git"

[target.thumbv7m-none-eabi.dependencies.modules]
git = "https://github.com/RustyGecko/modules.git"
